styles/index_styles.css
/*
    Personal Website - Cover Page Stylesheet
    Filename:   index_styles.css

    Author:     Ryan Smaller
    Date:       4/13/25
*/
/* Header and Footer */
header, footer {
    font-size: 0.7em;
    text-align: center;
    border: 0.3em solid darkblue;
    border-radius: 7px;
    margin: 0.2vh;
    height: 6vh;
    min-height: 30px;
    background-color: azure;
}

header h1 {
    line-height: 3vh;
}

a #footer-nav h1 {
    line-height: 3vh;
    height: 0;
}

/* Organizational Containers */
#body-div {
    display: flex;
    flex: 1;
    height: 84vh;
    margin: 0.2vh;
}

#greater-portrait-photo {
    flex: inherit; /* Ensure the div with portrait photo, about me, and navigation are all flexing to their maximum possible size to fill up the screen. */
    margin: 0.2vh;
    min-width: 0;
    flex: 0.35;
}

#about-nav {
    display: flex;
    margin: 0.2vh;
    z-index: 1 !important;
    min-width: 0;
}

/* Individual Bordered Containers */
#my-story {
    background-color: azure;
    flex: 0.325;
    height: 98.6%;
    border: 0.2em solid darkblue;
    border-radius: 7px;
    margin: 0.2vh;
    padding-left: 0.2em;
    padding-right: 0.2em;
    z-index: 1 !important;
}

#portrait-photo {
    height: 49.5%;
    text-align: center; /* This centers the portrait image. */
    border: 0.2em solid darkblue;
    border-radius: 7px;
    margin: 0.2vh;
    padding: 0;
    background-image: url("../resources/images/main/portrait-background.jpg") !important;
    background-repeat: repeat;
    background-color: #f0ffff;
    flex: 0.33;
    min-width: 0 !important;
}

div#portrait-photo img {
    max-height: 100%;
    max-width: 100%;
    min-width: 0 !important;
    position: relative;
    top: 50%;
    transform: translateY(-50%); /* For centering image vertically. Cited from https://stackoverflow.com/questions/7273338/how-to-vertically-align-an-image-inside-a-div */
    margin: auto;
}

#collage {
    flex: 0.325;
    height: 98.6%;
    border: 0.2em solid darkblue;
    border-radius: 7px;
    margin: 0.2vh;
    text-align: center;
    background-image: url("../resources/images/main/portrait-background2.jpg") !important;
    background-repeat: repeat;
    background-color: azure;
    z-index: 1 !important;
}

#collage img { /* Ensure images in the collage dynamically resize with viewport. */
    max-width: 100%;
}

#about-me {
    flex: 0.55;
    height: 39.4vh;
    padding: 0.1em 0.2em;
    border: 0.2em solid darkblue;
    border-radius: 7px;
    margin: 0.2vh;
    background-color: azure;
    z-index: 1 !important;
    min-width: 0;
}

/* Styling Instagram Embed */
.instagram-media { /* This selector and margin property are sourced from https://cavesocial.com/embed-instagram-photo-website-blog specifically for centering Instagram embeds. */
    margin: auto !important;
}

/* Navigation Menu */
#navbar {
    flex: 0.45;
    height: 39.4vh;
    border: 0.2em solid darkblue;
    border-radius: 7px;
    margin: 0.2vh;
    display: flex;
    flex-direction: column;
    padding: 0.1em;
    min-width: 0;
}

#navbar a {
    border: 0.2em solid darkblue;
    border-radius: 7px;
    margin: 0.1em;
    display: flex;
    flex: 1 !important;
    height: 100%;
    justify-content: center;
    align-items: center;
    min-height: 0;
    background-color: azure;
}

